force-app/main/default/objects/EYI_Project_Unit__c/EYI_Project_Unit__c.object-meta.xml
<CustomObject>
    <label>Project Unit</label>
    <nameField>
        <label>Project Unit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>