force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Actual_Area_SqMt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_Area_SqMt__c</fullName>
    <label>Actual Area (Sq.Mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>