force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Actual_Area_value__c.field-meta.xml
<CustomField>
    <fullName>EYI_Actual_Area_value__c</fullName>
    <label>Actual Area value</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>