force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Add_on_Requests__c.field-meta.xml
<CustomField>
    <fullName>EYI_Add_on_Requests__c</fullName>
    <label>Add on Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>