force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Adjacent_to_Lobby__c.field-meta.xml
<CustomField>
    <fullName>EYI_Adjacent_to_Lobby__c</fullName>
    <label>Adjacent to Lobby</label>
    <length>50</length>
    <type>Text</type>
</CustomField>