force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Approx_TCV__c.field-meta.xml
<CustomField>
    <fullName>EYI_Approx_TCV__c</fullName>
    <label>Approx TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>