force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Balcony_AreaSqFt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Balcony_AreaSqFt__c</fullName>
    <label>Balcony Area(Sq.Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>