force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Base_Unit_Of_Measure__c.field-meta.xml
<CustomField>
    <fullName>EYI_Base_Unit_Of_Measure__c</fullName>
    <label>Base Unit Of Measure</label>
    <length>30</length>
    <type>Text</type>
</CustomField>