force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Booking__c.field-meta.xml
<CustomField>
    <fullName>EYI_Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>EYI_Booking__c</referenceTo>
    <relationshipLabel>Project Units</relationshipLabel>
    <relationshipName>Project_Units</relationshipName>
    <type>Lookup</type>
</CustomField>