force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Car_Parking_Type_1_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Parking_Type_1_Count__c</fullName>
    <label>Car Parking Type 1 Count</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>