force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Car_Parking_Type_3__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Parking_Type_3__c</fullName>
    <label>Car Parking Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Ground Podium</fullName>
            </value>
            <value>
                <fullName>Measurement Podium</fullName>
            </value>
            <value>
                <fullName>Ground Stilt</fullName>
            </value>
            <value>
                <fullName>Covered Parking</fullName>
            </value>
            <value>
                <fullName>Open Car Parking</fullName>
            </value>
            <value>
                <fullName>Mezzanine Stilt</fullName>
            </value>
            <value>
                <fullName>Stack Car Parking</fullName>
            </value>
            <value>
                <fullName>Two Wheeler Parking</fullName>
            </value>
            <value>
                <fullName>VILLA V1</fullName>
            </value>
            <value>
                <fullName>VILLA V2</fullName>
            </value>
            <value>
                <fullName>VILLA V3</fullName>
            </value>
            <value>
                <fullName>Tanti Villa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>