force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Car_Parking_Type_3_Count__c.field-meta.xml
<CustomField>
    <fullName>EYI_Car_Parking_Type_3_Count__c</fullName>
    <label>Car Parking Type 3 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>