force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Carpet_Area__c</fullName>
    <label>Carpet Area (Sq.Ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>