force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Construction__c.field-meta.xml
<CustomField>
    <fullName>EYI_Construction__c</fullName>
    <label>Construction</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>