force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Distribution_Channel__c.field-meta.xml
<CustomField>
    <fullName>EYI_Distribution_Channel__c</fullName>
    <label>Distribution Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Common</fullName>
            </value>
            <value>
                <fullName>Residential Sales</fullName>
            </value>
            <value>
                <fullName>Commercial Sales</fullName>
            </value>
            <value>
                <fullName>Domestic Sales</fullName>
            </value>
            <value>
                <fullName>Export Sales</fullName>
            </value>
            <value>
                <fullName>Sale of Services</fullName>
            </value>
            <value>
                <fullName>Group Company Sales</fullName>
            </value>
            <value>
                <fullName>Stock Transfer</fullName>
            </value>
            <value>
                <fullName>Other Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>