force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Dry_BalconySqMt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Dry_BalconySqMt__c</fullName>
    <label>Dry Balcony(Sq.Mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>