force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Enclosed_BalconySqFt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Enclosed_BalconySqFt__c</fullName>
    <label>Enclosed Balcony(Sq.Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>