force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Floor_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Floor_Name__c</fullName>
    <label>Floor Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>