force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Floor_Rise__c.field-meta.xml
<CustomField>
    <fullName>EYI_Floor_Rise__c</fullName>
    <label>Floor Rise</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>