force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Gallery_Type__c.field-meta.xml
<CustomField>
    <fullName>EYI_Gallery_Type__c</fullName>
    <label>Gallery Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Custom</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>