force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Lease__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lease__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lease</label>
    <type>Checkbox</type>
</CustomField>