force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Lease_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Lease_Status__c</fullName>
    <label>Lease Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Vaccant</fullName>
            </value>
            <value>
                <fullName>Leased</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>