force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Material_Group__c.field-meta.xml
<CustomField>
    <fullName>EYI_Material_Group__c</fullName>
    <label>Material Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>