force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Net_Area_SqFt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Net_Area_SqFt__c</fullName>
    <label>Net Area (Sq.Ft)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>