force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_OC_Approved__c.field-meta.xml
<CustomField>
    <fullName>EYI_OC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OC Approved</label>
    <type>Checkbox</type>
</CustomField>