force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Open_Balcony__c.field-meta.xml
<CustomField>
    <fullName>EYI_Open_Balcony__c</fullName>
    <label>Open Balcony</label>
    <length>50</length>
    <type>Text</type>
</CustomField>