force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Open_terrace_Garden_areaSqFt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Open_terrace_Garden_areaSqFt__c</fullName>
    <label>Open terrace/ Garden area(Sq.Ft)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>