force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Plot_Area__c.field-meta.xml
<CustomField>
    <fullName>EYI_Plot_Area__c</fullName>
    <label>Plot Area</label>
    <length>50</length>
    <type>Text</type>
</CustomField>