force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Remark__c</fullName>
    <label>Remark</label>
    <type>TextArea</type>
</CustomField>