force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_ReSale__c.field-meta.xml
<CustomField>
    <fullName>EYI_ReSale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReSale</label>
    <type>Checkbox</type>
</CustomField>