force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Reserved__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reserved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reserved</label>
    <type>Checkbox</type>
</CustomField>