force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Reserved_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Reserved_Date__c</fullName>
    <label>Reserved Date</label>
    <type>Date</type>
</CustomField>