force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_SAP_Material_Description__c.field-meta.xml
<CustomField>
    <fullName>EYI_SAP_Material_Description__c</fullName>
    <label>SAP Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>