force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Services__c.field-meta.xml
<CustomField>
    <fullName>EYI_Services__c</fullName>
    <label>Services</label>
    <length>50</length>
    <type>Text</type>
</CustomField>