force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_SharingProjectName__c.field-meta.xml
<CustomField>
    <fullName>EYI_SharingProjectName__c</fullName>
    <label>Sharing_ProjectName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>