force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Sit_Out__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sit_Out__c</fullName>
    <label>Sit Out</label>
    <length>50</length>
    <type>Text</type>
</CustomField>