force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Stack_Earmarked__c.field-meta.xml
<CustomField>
    <fullName>EYI_Stack_Earmarked__c</fullName>
    <label>Stack (Earmarked)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>