force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>