force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Tax_Classification_1__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Classification_1__c</fullName>
    <label>Tax Classification 1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>GST Registered</fullName>
            </value>
            <value>
                <fullName>Not Registered</fullName>
            </value>
            <value>
                <fullName>SEZ Developer</fullName>
            </value>
            <value>
                <fullName>Deemed Exports</fullName>
            </value>
            <value>
                <fullName>Exports Sales</fullName>
            </value>
            <value>
                <fullName>Taxable under SEZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>