force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Tax_Classification_2__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Classification_2__c</fullName>
    <label>Tax Classification 2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TCS Applicable</fullName>
            </value>
            <value>
                <fullName>TCS Not Applicable</fullName>
            </value>
            <value>
                <fullName>TDS Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>