force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Tax_Rate_Basic__c.field-meta.xml
<CustomField>
    <fullName>EYI_Tax_Rate_Basic__c</fullName>
    <label>Tax Rate Basic</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Tax 1</fullName>
            </value>
            <value>
                <fullName>Service Tax 2</fullName>
            </value>
            <value>
                <fullName>Service Tax 3</fullName>
            </value>
            <value>
                <fullName>Service Tax 4</fullName>
            </value>
            <value>
                <fullName>GST</fullName>
            </value>
            <value>
                <fullName>GST-18</fullName>
            </value>
            <value>
                <fullName>GST - 8</fullName>
            </value>
            <value>
                <fullName>GST-12</fullName>
            </value>
            <value>
                <fullName>GST-5</fullName>
            </value>
            <value>
                <fullName>GST - 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>