force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_TDS__c.field-meta.xml
<CustomField>
    <fullName>EYI_TDS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TDS</label>
    <type>Checkbox</type>
</CustomField>