force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Term_Condition__c.field-meta.xml
<CustomField>
    <fullName>EYI_Term_Condition__c</fullName>
    <label>Term &amp; Condition</label>
    <type>TextArea</type>
</CustomField>