force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Terrace_Area_SqFt__c.field-meta.xml
<CustomField>
    <fullName>EYI_Terrace_Area_SqFt__c</fullName>
    <label>Terrace Area (Sq.Ft.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>