force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Unit_Category__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Category__c</fullName>
    <label>Unit Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Shop</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>