force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Unit_Direction__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Direction__c</fullName>
    <label>Unit Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>East</fullName>
            </value>
            <value>
                <fullName>West</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
            <value>
                <fullName>East/West</fullName>
            </value>
            <value>
                <fullName>East &amp; West</fullName>
            </value>
            <value>
                <fullName>North/East</fullName>
            </value>
            <value>
                <fullName>North South</fullName>
            </value>
            <value>
                <fullName>North &amp; South</fullName>
            </value>
            <value>
                <fullName>North.West</fullName>
            </value>
            <value>
                <fullName>South East</fullName>
            </value>
            <value>
                <fullName>South West</fullName>
            </value>
            <value>
                <fullName>South West &amp; North East</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>