force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Unit_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_SAP_Code__c</fullName>
    <label>Unit SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>