force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_Unit_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit_Status__c</fullName>
    <label>Unit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Vacant</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Reserved</fullName>
            </value>
            <value>
                <fullName>Blocked</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>