force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_UnitNo__c.field-meta.xml
<CustomField>
    <fullName>EYI_UnitNo__c</fullName>
    <label>UnitNo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>