force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_V_R_V__c.field-meta.xml
<CustomField>
    <fullName>EYI_V_R_V__c</fullName>
    <label>V.R.V</label>
    <length>50</length>
    <type>Text</type>
</CustomField>