force-app/main/default/objects/EYI_Project_Unit__c/fields/EYI_View2__c.field-meta.xml
<CustomField>
    <fullName>EYI_View2__c</fullName>
    <label>View2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Garden View</fullName>
            </value>
            <value>
                <fullName>Sea Link View</fullName>
            </value>
            <value>
                <fullName>Park View</fullName>
            </value>
            <value>
                <fullName>Sea View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>